quick fix for about spacing

--- a/styles/card.css
+++ b/styles/card.css
@@ -17,7 +17,7 @@
 	font-weight: 500;
 	font-size: 1.6em;
 	padding-left: 40px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .card-text {
